--- a/web/css/main.css
+++ b/web/css/main.css
@@ -6,7 +6,6 @@ html, body {
 body {
     margin: 0;
     color: #fff;
-    text-shadow: 0 1px 3px rgba(0,0,0,.5);
     box-shadow: inset 0 0 100px rgba(0,0,0,.5);
     font-family: "Source Code Pro", Monaco, Andale Mono, Consolas, monospace;
 }
@@ -73,10 +72,12 @@ body {
     margin: 0;
     padding-top: 1%;
     text-align: center;
+    text-shadow: 0 1px 3px rgba(255, 255, 255, .5);
 }
 
 #content > div > h2 {
     margin: 0;
+    text-shadow: 0 1px 3px rgba(255, 255, 255, .5);
 }
 
 #content {
